@@ -1,7 +1,5 @@
-package org.hisp.dhis.schema;
-
 /*
- * Copyright (c) 2004-2020, University of Oslo
+ * Copyright (c) 2004-2021, University of Oslo
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -27,20 +25,26 @@ package org.hisp.dhis.schema;
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
+package org.hisp.dhis.schema;
+
+import java.lang.reflect.InvocationTargetException;
+import java.util.Collection;
+import java.util.stream.Collectors;
+
+import lombok.extern.slf4j.Slf4j;
 
 import org.hisp.dhis.common.MergeMode;
+import org.hisp.dhis.hibernate.HibernateProxyUtils;
 import org.hisp.dhis.system.util.ReflectionUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.Collection;
-import java.util.stream.Collectors;
 
 /**
  * @author Morten Olav Hansen <mortenoh@gmail.com>
  */
 @Service( "org.hisp.dhis.schema.MergeService" )
 @Transactional
+@Slf4j
 public class DefaultMergeService implements MergeService
 {
     private final SchemaService schemaService;
@@ -56,7 +60,7 @@ public class DefaultMergeService implements MergeService
         T source = mergeParams.getSource();
         T target = mergeParams.getTarget();
 
-        Schema schema = schemaService.getDynamicSchema( source.getClass() );
+        Schema schema = schemaService.getDynamicSchema( HibernateProxyUtils.getRealClass( source ) );
 
         for ( Property property : schema.getProperties() )
         {
@@ -73,7 +77,7 @@ public class DefaultMergeService implements MergeService
                 }
             }
 
-            // passwords should only be merged manually
+            // Passwords should only be merged manually
             if ( property.is( PropertyType.PASSWORD ) )
             {
                 continue;
@@ -98,7 +102,8 @@ public class DefaultMergeService implements MergeService
                 {
                     Collection<T> merged = ReflectionUtils.newCollectionInstance( property.getKlass() );
                     merged.addAll( targetObject );
-                    merged.addAll( sourceObject.stream().filter( o -> !merged.contains( o ) ).collect( Collectors.toList() ) );
+                    merged.addAll(
+                        sourceObject.stream().filter( o -> !merged.contains( o ) ).collect( Collectors.toList() ) );
 
                     targetObject.clear();
                     targetObject.addAll( merged );
@@ -115,7 +120,8 @@ public class DefaultMergeService implements MergeService
             {
                 Object sourceObject = ReflectionUtils.invokeMethod( source, property.getGetterMethod() );
 
-                if ( mergeParams.getMergeMode().isReplace() || ( mergeParams.getMergeMode().isMerge() && sourceObject != null ) )
+                if ( mergeParams.getMergeMode().isReplace()
+                    || (mergeParams.getMergeMode().isMerge() && sourceObject != null) )
                 {
                     ReflectionUtils.invokeMethod( target, property.getSetterMethod(), sourceObject );
                 }
@@ -129,14 +135,18 @@ public class DefaultMergeService implements MergeService
     @SuppressWarnings( "unchecked" )
     public <T> T clone( T source )
     {
-        if ( source == null ) return null;
+        if ( source == null )
+            return null;
 
         try
         {
-            return merge( new MergeParams<>( source, (T) source.getClass().newInstance() ).setMergeMode( MergeMode.REPLACE ) );
+            return merge( new MergeParams<>( source,
+                (T) HibernateProxyUtils.getRealClass( source ).getDeclaredConstructor().newInstance() )
+                    .setMergeMode( MergeMode.REPLACE ) );
         }
-        catch ( InstantiationException | IllegalAccessException ignored )
+        catch ( InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e )
         {
+            log.info( "Failed to clone source object, source=" + source, e );
         }
 
         return null;
